--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,59 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+  <ion-fab bottom right>
+    <button ion-fab color="secondary"><ion-icon name="add"></ion-icon></button>
+  </ion-fab>
+  <ion-list scrollY="true" no-lines>
+    <ion-item class="user">
+      <ion-avatar item-start>
+        <img src="assets/imgs/profile.jpg">
+      </ion-avatar>
+      <ion-grid>
+        <ion-row>
+          <ion-col col-10>
+            <h2>Hola, Brad</h2>
+            <p>We're glad you're here.</p>
+          </ion-col>
+          <ion-col col-2>
+            <ion-icon ios="ios-arrow-forward" md="md-arrow-forward"></ion-icon>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+    <ion-item class="event-info">
+      <ion-avatar item-start>
+        <img src="assets/imgs/profile.jpg">
+      </ion-avatar>
+      <ion-grid>
+        <ion-row>
+          <ion-col col-10>
+            <h3>WebDevs</h3>
+          </ion-col>
+          <ion-col col-2>
+            <p class="date">4/5/17</p>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col col-12>
+            <p text-wrap>Lorem ipsum dolor sit amet, nonummy a hac ut vitae, nulla quis at eu turpis adipiscing eget. Bibendum ut nec non natoque mi, penatibus arcu faucibus curabitur quis mauris rhoncus.</p>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+    <attendee-list-item></attendee-list-item>
+    <attendee-list-item></attendee-list-item>
+    <attendee-list-item></attendee-list-item>
+    <attendee-list-item></attendee-list-item>
+    <attendee-list-item></attendee-list-item>
+    <attendee-list-item></attendee-list-item>
+    <attendee-list-item></attendee-list-item>
+    <attendee-list-item></attendee-list-item>
+    <attendee-list-item></attendee-list-item>
+    <attendee-list-item></attendee-list-item>
+    <attendee-list-item></attendee-list-item>
+    <attendee-list-item></attendee-list-item>
+    <attendee-list-item></attendee-list-item>
+  </ion-list>
 </ion-content>
+
+
+
