--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -18,11 +18,11 @@
 <ion-content class="page-login">
     <div class="content">
         <header class="animated bounceInDown">
-            <img src="assets/imgs/web-devs-logo.svg" alt="SGF Web Devs Logo" width="249" height="110">
+            <img src="assets/imgs/web-devs-logo.svg" alt="SGF Web Devs Logo">
         </header>
 
         <div class="cta">
-            <img src="assets/imgs/github-button.svg" alt="Login" width="244" height="54">
+            <img src="assets/imgs/github-button.svg" alt="Login">
         </div>
 
         <footer>
