ugggh. all sorts of stuff. login page looking pretty slick now, though.

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -15,7 +15,7 @@
 
 
 
-<ion-content class="page-login">
+<ion-content no-bounce class="page-login">
     <div class="content">
         <header class="animated bounceInDown">
             <img src="assets/imgs/web-devs-logo.svg" alt="SGF Web Devs Logo">
