finishing up merge and re-wiring the mock login navigation

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -22,7 +22,7 @@
         </header>
 
         <div class="cta">
-            <img src="assets/imgs/github-button.svg" alt="Login">
+            <img src="assets/imgs/github-button.svg" alt="Login" (click)="doLogin()">
         </div>
 
         <footer>
