Adding check in button and theme colors to theme color map

--- a/src/pages/check-in/check-in.html
+++ b/src/pages/check-in/check-in.html
@@ -24,3 +24,8 @@
         <p>Pizza will be provided per usual routine. BYOB.</p>
     </div>
 </ion-content>
+<ion-footer>
+    <ion-toolbar>
+        <button ion-button color="primary" block>Check-In Now</button>
+    </ion-toolbar>
+</ion-footer>
