--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-content>
     <ion-list scrollY="true" no-lines>
-        <ion-item class="user">
+        <ion-item class="user" color="grey-dark">
             <ion-avatar item-start>
                 <img src="assets/imgs/profile.jpg">
             </ion-avatar>
