Changed home page and checkin page to use colors from the scss color map

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,7 +6,7 @@
             </ion-avatar>
             <button ion-button block outline color="light" [navPush]="checkIn">Check in</button>
         </ion-item>
-        <ion-item class="event-info">
+        <ion-item class="event-info" color="primary-light">
             <ion-avatar item-start>
                 <img src="assets/imgs/profile.jpg">
             </ion-avatar>
