--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,7 +4,7 @@
             <ion-avatar item-start>
                 <img src="assets/imgs/profile.jpg">
             </ion-avatar>
-            <button ion-button block outline color="light" [navPush]="checkIn">Check in</button>
+            <button ion-button block outline color="light" (click)="showCheckIn()">Check in</button>
         </ion-item>
         <ion-item class="event-info" color="primary-light">
             <ion-avatar item-start>
