Adding content and color

--- a/src/pages/pre-checkin/pre-checkin.html
+++ b/src/pages/pre-checkin/pre-checkin.html
@@ -14,13 +14,15 @@
 
 <ion-content>
     <div padding>
+        <h3><strong>Flexbox</strong></h3>
+        <h3 class="primary">January 6 &sdot; 6:00 PM</h3>
         <p>Let's kickoff 2016 by learning about one of the best things to happen to css in a long time - Flexbox.</p>
 
         <p>Flexbox allows us to accomplish layouts in a matter of seconds which would generally be much more time consuming, verbose, and sometimes even impossible(without the use of Javascript) with the regular ole' block layout.</p>
         
         <p>This will be almost entirely a front-end driven session, however, if you are more of a back-end dev who is instantly annoyed with css concepts like floats, then you will definitely want to attend this session!</p>
         
-        <p>Pizza will be provided per usual routine. BYOB.</p>
+        <p>Pizza will be provided per usual routine. <strong>BYOB.</strong> <br>Social + Food - 6:00 - 6:30<br>Topic Presentation - 6:30 - 7:30<br>Post-Meetup Hangout - 7:30 - Whenever</p>
     </div>
 </ion-content>
 <ion-footer>
