Adding footer check-in info

--- a/src/pages/pre-checkin/pre-checkin.html
+++ b/src/pages/pre-checkin/pre-checkin.html
@@ -23,10 +23,8 @@
         <p>This will be almost entirely a front-end driven session, however, if you are more of a back-end dev who is instantly annoyed with css concepts like floats, then you will definitely want to attend this session!</p>
         
         <p>Pizza will be provided per usual routine. <strong>BYOB.</strong> <br>Social + Food - 6:00 - 6:30<br>Topic Presentation - 6:30 - 7:30<br>Post-Meetup Hangout - 7:30 - Whenever</p>
-    </div>
+        <hr>
+        <p class="grey-text">Check-in will be available 45 mins before the event begins and is open until the prizes are awarded at the event. You must check-in to win.</p>
+      </div>
 </ion-content>
-<ion-footer>
-    <ion-toolbar>
-        <button ion-button color="primary" block>Check-In Now</button>
-    </ion-toolbar>
-</ion-footer>
+
