Tweaking padding for the headers

--- a/src/pages/pre-checkin/pre-checkin.html
+++ b/src/pages/pre-checkin/pre-checkin.html
@@ -12,9 +12,8 @@
 
 </ion-header>
 
-<ion-content>
-    <div padding>
-        <h3><strong>Flexbox</strong></h3>
+<ion-content padding>
+        <h3 class="pad-top"><strong>Flexbox</strong></h3>
         <h3 class="primary">January 6 &sdot; 6:00 PM</h3>
         <p>Let's kickoff 2016 by learning about one of the best things to happen to css in a long time - Flexbox.</p>
 
@@ -25,6 +24,5 @@
         <p>Pizza will be provided per usual routine. <strong>BYOB.</strong> <br>Social + Food - 6:00 - 6:30<br>Topic Presentation - 6:30 - 7:30<br>Post-Meetup Hangout - 7:30 - Whenever</p>
         <hr>
         <p class="grey-text">Check-in will be available 45 mins before the event begins and is open until the prizes are awarded at the event. You must check-in to win.</p>
-      </div>
 </ion-content>
 
