adding firebase and firebaseauth

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -21,8 +21,9 @@
             <img src="assets/imgs/web-devs-logo.svg" alt="SGF Web Devs Logo">
         </header>
 
+
         <div class="cta">
-            <img src="assets/imgs/github-button.svg" alt="Login" (click)="doLogin()">
+            <img src="assets/imgs/github-button.svg" alt="Login" (click)="login()">
         </div>
 
         <footer>
