--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,7 @@
         </ion-item>
         <ion-item class="event-info" color="primary-light">
             <ion-avatar item-start>
-                <img src="assets/imgs/profile.jpg">
+                <img src="assets/imgs/logo-small.png">
             </ion-avatar>
             <ion-grid>
                 <ion-row>
