--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+  <!-- add Google Maps JavaScript SDK -->
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyCGpOHeMA9P8YXDaE7mLCxHhxx7RORz_To"></script>
+
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
 
