--- a/src/pages/check-in/check-in.html
+++ b/src/pages/check-in/check-in.html
@@ -13,14 +13,14 @@
 </ion-header>
 
 <ion-content>
-    <img src="assets/imgs/map.jpg">
+    <div #map id="map"></div>
     <div padding>
         <p>Let's kickoff 2016 by learning about one of the best things to happen to css in a long time - Flexbox.</p>
 
         <p>Flexbox allows us to accomplish layouts in a matter of seconds which would generally be much more time consuming, verbose, and sometimes even impossible(without the use of Javascript) with the regular ole' block layout.</p>
-        
+
         <p>This will be almost entirely a front-end driven session, however, if you are more of a back-end dev who is instantly annoyed with css concepts like floats, then you will definitely want to attend this session!</p>
-        
+
         <p>Pizza will be provided per usual routine. BYOB.</p>
     </div>
 </ion-content>
