big ole’ updates

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,35 +1,33 @@
 
 <ion-content>
-    <ul>
-        <li *ngFor="let item of items | async">
-            {{ item.firstName }}
-        </li>
-    </ul>
-    <h1 *ngIf="auth.user">{{auth.user.displayName}}</h1>
     <ion-list scrollY="true" no-lines>
         <ion-item class="user" color="grey-dark">
             <ion-avatar item-start>
                 <img src="assets/imgs/profile.jpg">
             </ion-avatar>
-            <button ion-button block outline color="light" (click)="showCheckIn()">Check in</button>
+
+            <h1 *ngIf="auth.user">{{ auth.user.displayName }}</h1>
+            <button ion-button block outline color="light" (click)="checkIn()" *ngIf="allowedToCheckin()">Check in</button>
+            <button ion-button block outline color="light" (click)="openNextEventInBrowser(latestMeetup.link)" *ngIf="showRsvpLink()">RSVP For The Next Meetup</button>
+            <h3 *ngIf="checkedIn">You are checked in. Grab some pizza and enjoy the night!</h3>
         </ion-item>
-        <ion-item class="event-info" color="primary-light">
+
+        <ion-item class="event-info" color="primary-light" *ngIf="latestMeetup">
             <ion-avatar item-start>
                 <img src="assets/imgs/logo-small.png">
             </ion-avatar>
             <ion-grid>
                 <ion-row>
                     <ion-col col-10>
-                        <h3>WebDevs</h3>
+                        <h3>{{ latestMeetup.name }}</h3>
                     </ion-col>
                     <ion-col col-2>
-                        <p class="date">4/5/17</p>
+                        <p class="date">{{ formatDate(latestMeetup.local_date) }}</p>
                     </ion-col>
                 </ion-row>
                 <ion-row>
                     <ion-col col-12>
-                        <p text-wrap>Lorem ipsum dolor sit amet, nonummy a hac ut vitae, nulla quis at eu turpis adipiscing eget. Bibendum
-                            ut nec non natoque mi, penatibus arcu faucibus curabitur quis mauris rhoncus.</p>
+                        <div text-wrap [innerHTML]="trimDescription(latestMeetup.description)" class="description"></div>
                     </ion-col>
                 </ion-row>
             </ion-grid>
