--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,7 +12,7 @@
             <h3 *ngIf="checkedIn" text-wrap>You are checked in. Grab some pizza and enjoy the night!</h3>
         </ion-item>
 
-        <ion-item class="event-info" color="primary-light" *ngIf="latestMeetup">
+        <ion-item class="event-info" color="primary-light" *ngIf="latestMeetup" (click)="toggleDescription()">
             <ion-grid>
                 <ion-row>
                     <ion-col col-10>
@@ -24,7 +24,18 @@
                 </ion-row>
                 <ion-row>
                     <ion-col col-12>
-                        <div text-wrap [innerHTML]="trimDescription(latestMeetup.description)" class="description"></div>
+                        <div text-wrap [ngClass]="showMore ? 'description' : 'description minimized'">
+                            <div [innerHTML]="trimDescription(latestMeetup.description)"></div>
+                        </div>
+                    </ion-col>
+                </ion-row>
+            </ion-grid>
+        </ion-item>
+        <ion-item color="primary-light" *ngIf="!showMore" (click)="toggleDescription()">
+            <ion-grid>                    
+                <ion-row text-right>
+                    <ion-col col-12>
+                        <div>...Show More</div>
                     </ion-col>
                 </ion-row>
             </ion-grid>
