Added Meetup Login Button

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -26,6 +26,8 @@
             <img src="assets/imgs/github-button.svg" alt="Login" (click)="login()">
         </div>
 
+        <meetup-login-button></meetup-login-button>
+
         <footer>
             Web Dev Community in Springfield, MO
         </footer>
