--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
                 <img *ngIf="currentUser" [src]="currentUser.photo.thumb_link">
             </ion-avatar>
 
-            <h1 *ngIf="auth.user">{{ auth.user.displayName }}</h1>
+            <h1 *ngIf="currentUser">{{ currentUser.name }}</h1>
             <button ion-button block outline color="light" (click)="checkIn()" *ngIf="allowedToCheckin()">Check in</button>
             <button ion-button block outline color="light" (click)="openNextEventInBrowser(latestMeetup.link)" *ngIf="showRsvpLink()">RSVP For The Next Meetup</button>
             <h3 *ngIf="checkedIn" text-wrap>You are checked in. Grab some pizza and enjoy the night!</h3>
