--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -29,6 +29,7 @@
             <label for="token_override" style="color: white;">Token:</label>
             <input id="token_override" type="text" [(ngModel)]="token"/>
             <button ion-button (click)="loginOverride()">Go</button>
+            <button ion-button full color="danger" (click)="clearLocal()">Clear Cache</button>
         </div>
 
         <footer>
