changing api call to use v3 with token

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,7 +20,7 @@
                         <h3>{{ latestMeetup.name }}</h3>
                     </ion-col>
                     <ion-col col-2>
-                        <p class="date">{{ formatDate(latestMeetup.local_date) }}</p>
+                        <p class="date">{{ formatDate(latestMeetup.time) }}</p>
                     </ion-col>
                 </ion-row>
                 <ion-row>
