allow user to rsvp when not ready to checkin

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,7 +9,8 @@
 
             <h1 *ngIf="currentUser">{{ currentUser.name }}</h1>
             <button ion-button block outline color="light" (click)="checkIn()" *ngIf="allowedToCheckin()">Check in</button>
-            <button ion-button block outline color="light" (click)="openNextEventInBrowser(latestMeetup.link)" *ngIf="showRsvpLink()">RSVP For The Next Meetup</button>
+            <button ion-button block outline color="light" (click)="rsvp(latestMeetup.id)" *ngIf="showRsvpLink()">RSVP For The Next Meetup</button>
+            <button ion-button block outline color="danger" (click)="cancelRsvp(latestMeetup.id)" *ngIf="showCancelRsvp()">Cancel RSVP</button>
             <h3 *ngIf="checkedIn" text-wrap>You are checked in. Grab some pizza and enjoy the night!</h3>
         </ion-item>
 
