--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -31,6 +31,16 @@
                 </ion-row>
             </ion-grid>
         </ion-item>
+        <ion-item *ngIf="logging">
+            <ion-grid>
+                <ion-row>
+                    <ion-col col-12>
+                        Logs:
+                        <p *ngFor="let log of logs">{{log}}</p>        
+                    </ion-col>
+                </ion-row>
+            </ion-grid>
+        </ion-item>
         <attendee-list-item *ngFor="let attendee of attendees" [attendee]="attendee"></attendee-list-item>
     </ion-list>
 </ion-content>
