Trying out ng2-cordova-oauth

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -34,7 +34,7 @@
         <ion-list>
 
             <ion-item>
-                <a href="#" (click)="doAlert()">Giveaway Rules</a>
+                <a href="#" (click)="showGiveAwayAlert()">Giveaway Rules</a>
                 <!--<button ion-button block (click)="doAlert()">Basic Alert</button>-->
                 <!--<ion-label>Give</ion-label>-->
                 <!--<ion-checkbox [(ngModel)]="terms"></ion-checkbox>-->
