Fix ios http and status bar issues

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 
 <ion-content>
-    <ion-list scrollY="true" no-lines>
+    <ion-list scrollY="true" no-lines class="padding-fix">
         <ion-item class="user" color="grey-dark">
             <ion-avatar item-start>
                 <img *ngIf="!currentUser" src="assets/imgs/profile.jpg">
